--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,1 +1,5 @@
-<p>member-list works!</p>
+<div class="row" style="padding-left: 15%; padding-right: 15%;">
+    <div *ngFor="let member of members" class="col-2">
+        <app-member-card [member]="member"></app-member-card>
+    </div>
+</div>
