--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -19,16 +19,16 @@
                     <p>{{member.city}}, {{member.country}}</p>
                 </div>
                 <div>
-                    <strong>Location</strong>
+                    <strong>Age</strong>
                     <p>{{member.age}}</p>
                 </div>
                 <div>
-                    <strong>Location</strong>
-                    <p>{{member.lastActive}}</p>
+                    <strong>Last Active</strong>
+                    <p>{{member.lastActive | date}}</p>
                 </div>
                 <div>
-                    <strong>Location</strong>
-                    <p>{{member.created}}</p>
+                    <strong>Account Created</strong>
+                    <p>{{member.created | date}}</p>
                 </div>
             </div>
             <div class="card-footer">
