--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -4,7 +4,7 @@
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item"><button routerLink="/members/{{member.username}}" class="btn btn-primary">
                 <i class="fa fa-user">see</i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary">
+            <li class="list-inline-item"><button class="btn btn-primary" (click)="addLike(member)">
                 <i class="fa fa-heart">like</i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary">
                 <i class="fa fa-envelope">mail</i></button></li>
