--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,11 @@
                 <i class="fa fa-user">see</i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary" (click)="addLike(member)">
                 <i class="fa fa-heart">like</i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary">
+            <li class="list-inline-item">
+                <button 
+                routerLink='/members/{{member.username}}' 
+                [queryParams]='{tab: 3}'
+                class="btn btn-primary">
                 <i class="fa fa-envelope">mail</i></button></li>
 
         </ul>
