--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
     <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './asset/user.png'}}" alt="{{member.knownAs}}"
@@ -24,29 +24,29 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">like</button>
-                    <button class="btn btn-success">messages</button>
+                    <button (click)="selectTab(3)" class="btn btn-success">messages</button>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="col-6">
-        <tabset class="member-tabset">
-            <tab heading="about {{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="about {{member.knownAs}}" (selectTab)="onTabActivatied($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading="Interests" >
+            <tab heading="Interests" (selectTab)="onTabActivatied($event)">
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
             </tab>
-            <tab heading="Photos">
+            <tab heading="Photos" (selectTab)="onTabActivatied($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
-            <tab heading="Messages">
-                <h4>Messages will go here</h4>
+            <tab heading="Messages" (selectTab)="onTabActivatied($event)">
+                <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
